--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <nav>
+  <section>
     <h1>Emmanuel Café</h1>
+    </section>
+    <nav>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#menu">Menu</a></li>
