--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section>
-    <h1>Emmanuel Café</h1>
+    <h1>EMMANUEL CAFE</h1>
     </section>
     <nav>
     <ul>
@@ -17,11 +17,12 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-
+<section>
   <header id="home">
     <h2>Welcome to Emmanuel Café</h2>
     <p>Delicious meals, cozy vibes — served fresh in Malindi</p>
   </header>
+  </section>
 
   <section id="menu" class="menu">
     <h3>Our Menu</h3>
